# birdview_gui

./: README.md
camera_view/: CMakeLists.txt  package.xml
camera_view/include/camera_view/: birdviewBuffer.hpp  birdviewWindow.hpp  buffer.hpp  externVariables.hpp  mainWindow.hpp  processThread.hpp  projectedWindow.hpp  projectionCamera.hpp  projectionWindow.hpp  settings.hpp  tabs.hpp  undistortedWindow.hpp  undistortionCamera.hpp  undistortionWindow.hpp  util.hpp  videoWidget.hpp  videoWindow.hpp
camera_view/src/: birdviewWindow.cpp  main.cpp  mainWindow.cpp  projectedWindow.cpp  projectionWindow.cpp  tabs.cpp  test_buffer_manager.cpp  undistortedWindow.cpp  undistortionWindow.cpp
camera_view/yaml/: distortion_left.yaml  project_board.yaml  projection_back.yaml  projection_left.yaml  projection_right.yaml  resolutions.yaml
keyboard_teleop/: CMakeLists.txt  package.xml
keyboard_teleop/src/: main.cpp
setup/: Dockerfile
setup/.devcontainer/: devcontainer.json
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/launch/: calibration_launch.py  robot_bringup.launch.py  robot_world.launch.py  spawn_robot.launch.py
simulation_launch/rviz/: urdf_config.rviz
simulation_launch/scripts/: generate_checkerboard.py  generate_moving_checkerboard.py
simulation_launch/urdf/: camera.urdf  camera.xacro  wheelchair.urdf  wheelchair.xacro
simulation_launch/worlds/: calibration_world  projection_world  projection_world_exact  test_drive_world  undistort_world  undistortion_world
