<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>keyboard_teleop</name>
  <version>0.0.0</version>
  <description>Sends velocity commands to cmd_vel topic from keyboard input</description>
  <maintainer email="juhyunglee0313@gmail.com">juhyung</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>SDL2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
